# sphincs-rs

./: .gitignore  1.	START_HERE.md  BENCHMARK_RESULTS.md  CODE_REVIEW.md  COMPLETION_CHECKLIST.md  Cargo-base.toml  Cargo.toml  DELIVERABLES.md  FINAL_PROJECT_COMPLETE.md  FINAL_SUMMARY.md  INDEX.md  NEXT_STEPS.md  OPTIMIZATION_GUIDE.md  PROJECT_PROGRESS.md  PROJECT_SUMMARY.md  README.md  REPORT_FRAMEWORK.md  REVIEW_SUMMARY.md  SESSION_SUMMARY.md  START_HERE.md  build.rs  rust_out
.github/workflows/: rust.yml
01rust_alpha/: Cargo.toml
01rust_alpha/src/: adrs.rs  fors.rs  hypertree.rs  main.rs  parameters.rs  sphincs.rs  wots.rs  xmss.rs
benches/: sphincs_bench.rs
demo/: README.md  main.rs
docs/: ALPHA_COMPARISON_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CODE_STRUCTURE.md  DEVELOPER_GUIDE.md  PROJECT_DOCUMENTATION.md  TESTING_AND_BENCHMARKS.md  TEST_RESULTS.md  introduction.md
src/: adrs.rs  digest.rs  fors.rs  group.rs  group_impl_helpers.rs  hash.rs  ht.rs  hypertree.rs  lib.rs  main.rs  parameters.rs  params.rs  params_alpha.rs  sphincs.rs  tests.rs  wots.rs  xmss.rs
src-base/: adrs.rs  fors.rs  hypertree.rs  main.rs  parameters.rs  sphincs.rs  wots.rs  xmss.rs
tests/: README.md  integration.rs  kat.rs  readme.docx
